extend test